--- a/playbooks/test_collections.yml
+++ b/playbooks/test_collections.yml
@@ -5,5 +5,7 @@
     timesync_ntp_servers:
       - hostname: 0.uk.pool.ntp.org
         iburst: yes
+  roles:
+    - redhat.rhel_system_roles.timesync
   tasks:
     - ping:
